# Persona-RAG

./: .gitignore  README.md  pyproject.toml
benchmarks_data/counterfactual_probes/climate_scientist/: probe_a_01.yaml  probe_a_02.yaml  probe_a_03.yaml  probe_a_04.yaml  probe_a_05.yaml  probe_a_06.yaml  probe_a_07.yaml  probe_a_08.yaml  probe_a_09.yaml  probe_a_10.yaml  probe_b_01.yaml  probe_b_02.yaml  probe_b_03.yaml  probe_b_04.yaml  probe_b_05.yaml  probe_b_06.yaml  probe_b_07.yaml  probe_b_08.yaml  probe_b_09.yaml  probe_b_10.yaml  probe_c_01.yaml  probe_c_02.yaml  probe_c_03.yaml  probe_c_04.yaml  probe_c_05.yaml  probe_c_06.yaml  probe_c_07.yaml  probe_c_08.yaml  probe_c_09.yaml  probe_c_10.yaml
benchmarks_data/counterfactual_probes/cs_tutor/: probe_a_01.yaml  probe_a_02.yaml  probe_a_03.yaml  probe_a_04.yaml  probe_a_05.yaml  probe_a_06.yaml  probe_a_07.yaml  probe_a_08.yaml  probe_a_09.yaml  probe_a_10.yaml  probe_b_01.yaml  probe_b_02.yaml  probe_b_03.yaml  probe_b_04.yaml  probe_b_05.yaml  probe_b_06.yaml  probe_b_07.yaml  probe_b_08.yaml  probe_b_09.yaml  probe_b_10.yaml  probe_c_01.yaml  probe_c_02.yaml  probe_c_03.yaml  probe_c_04.yaml  probe_c_05.yaml  probe_c_06.yaml  probe_c_07.yaml  probe_c_08.yaml  probe_c_09.yaml  probe_c_10.yaml
benchmarks_data/counterfactual_probes/historian/: probe_a_01.yaml  probe_a_02.yaml  probe_a_03.yaml  probe_a_04.yaml  probe_a_05.yaml  probe_a_06.yaml  probe_a_07.yaml  probe_a_08.yaml  probe_a_09.yaml  probe_a_10.yaml  probe_b_01.yaml  probe_b_02.yaml  probe_b_03.yaml  probe_b_04.yaml  probe_b_05.yaml  probe_b_06.yaml  probe_b_07.yaml  probe_b_08.yaml  probe_b_09.yaml  probe_b_10.yaml  probe_c_01.yaml  probe_c_02.yaml  probe_c_03.yaml  probe_c_04.yaml  probe_c_05.yaml  probe_c_06.yaml  probe_c_07.yaml  probe_c_08.yaml  probe_c_09.yaml  probe_c_10.yaml
benchmarks_data/drift_trajectory/climate_scientist/: drifting.yaml  in_persona.yaml
benchmarks_data/drift_trajectory/cs_tutor/: drifting.yaml  in_persona.yaml
benchmarks_data/drift_trajectory/historian/: drifting.yaml  in_persona.yaml
benchmarks_data/knowledge_corpora/cs_tutor/: 01_consensus_raft.md  02_cap_pacelc.md  03_eventual_consistency.md  04_two_phase_commit.md  05_actor_model.md
benchmarks_data/m1_id_rag_ablation/: cs_tutor_user_turns.yaml
benchmarks_data/personagym/: VENDORED.txt  personas.json
data/option8/uia_ikt/: qa.jsonl
personas/: climate_scientist.yaml  cs_tutor.yaml  historian.yaml
personas/examples/: climate_scientist.yaml  cs_tutor.yaml  historian.yaml
scripts/: drift_trajectory_sanity.py  fetch_personagym.py  human_validation.py  inspect_minicheck_contradictions.py  relabel_quantization_transcripts.py  render_geometry_figures.py  run_baseline.py  run_evaluation_harness.py  run_m1_id_rag_ablation.py  run_m1_retrieval_diff.py  run_m1_vs_b2_pilot.py  run_m3_character_rm_check.py  run_m3_drift_gate_calibration.py  run_m3_eyeball_gate_samples.py  run_m3_threshold_sweep.py  run_m3_vs_baselines_pilot.py  run_poll_pilot.py  run_prometheus_micro_test.py  run_spec09_a7_pilot.py  run_spec09_ablations_sweep.py  run_spec09_full_sweep.py  run_spec09_harness.py  run_spec09_quantization_8bit.py  run_spec09_quantization_fp16.py  sample_freet_adapter_with_fixed_z.py  sample_freet_with_fixed_z.py  smoke_test_models.py  spec09_diagnostics.py  train_free_transformer 2.py  train_free_transformer.py  train_freet_adapter.py  validate_freet_adapter.py  validate_freet_z_separation.py  validate_persona_vectors.py  verify_part3.py
scripts/option8/: evaluate.py  index_build.py  ingest.py  query.py
src/option8_rag/: __init__.py  types.py
src/option8_rag/chunking/: __init__.py  splitter.py
src/option8_rag/cli/: __init__.py  _common.py  evaluate.py  index.py  ingest.py  query.py
src/option8_rag/config/: __init__.py  default.yaml
src/option8_rag/embeddings/: __init__.py  encoder.py
src/option8_rag/evaluate/: __init__.py  groundedness.py  qa_metrics.py  retrieval_metrics.py
src/option8_rag/extensions/: __init__.py
src/option8_rag/index/: __init__.py  chroma_index.py  chunk_store.py
src/option8_rag/ingest/: __init__.py  beir.py  uia.py
src/option8_rag/retrieve/: __init__.py  bm25.py  dense.py  hybrid.py  rerank.py
src/option8_rag/synthesize/: __init__.py  generator.py
src/persona_rag/: __init__.py
src/persona_rag/benchmarks/: __init__.py  base.py  counterfactual_probes.py  personachat.py  personagym.py
src/persona_rag/config/: baseline.yaml  drift_trajectory.yaml  persona_store.yaml  (+8 more)
tests/: conftest.py  test_benchmarks_schema.py  test_bm25_utils.py  test_chunker.py  test_contrast_prompts.py  test_conversation_schema.py  test_cost_tracker.py  test_counterfactual_probes_suite.py  test_decay.py  test_drift.py  test_drift_gate.py  test_drift_gate_template.py  test_drift_quality.py  test_evaluation_runner.py  test_extractor.py  test_free_transformer.py  test_fusion.py  test_gemma.py  test_hf_backend_8bit_config.py  test_hybrid_ranker.py  test_knowledge_store.py  test_layer_selection.py  test_llama.py  test_mechanism_drift_gated.py  test_minicheck_metric.py  test_oracle_drift_gate.py  test_oracle_probe_runner.py  test_personachat_loader.py  test_personagym_loader.py  test_poll_panel.py  test_probe.py  test_probe_runner.py  test_prompt_persona.py  test_prompt_templates.py  test_refchecker_metric.py  test_registry.py  test_response_schema.py  test_run_baseline_dispatch.py  test_run_spec09_a7_pilot.py  test_schema.py  (+6 more)
tests/option8/: __init__.py  test_chunk_store.py  test_chunking.py  test_index_config.py  test_prompt_style.py  test_qa_metrics.py  test_retrieval_metrics.py  test_rrf.py  test_types.py  test_uia_helpers.py  test_uia_helpers_v2.py
(+126 files in other folders)
